Added a button for join group

--- a/public/main_page.html
+++ b/public/main_page.html
@@ -175,6 +175,8 @@
             </div>
         </div>
         <div class="add-group-form">
+            <input type="text" id="group-name" placeholder="Enter group code">
+            <button onclick="addGroup()">+ Join Group</button>
             <input type="text" id="group-name" placeholder="Enter group name">
             <button onclick="addGroup()">+ Add Group</button>
         </div>
