--- a/public/Q&A_page.html
+++ b/public/Q&A_page.html
@@ -120,6 +120,7 @@
     </style>
 </head>
 <body>
+    <a href="/main" style="display: inline-block; margin: 20px; font-weight: bold; text-decoration: none; background-color: #1f497d; color: white; padding: 10px 15px; border-radius: 5px;">← Back to Home</a>
 
     <div class="container">
         <h1>Q&A Forum</h1>
