--- a/public/scheduling.html
+++ b/public/scheduling.html
@@ -173,6 +173,8 @@
     </style>
 </head>
 <body>
+    <a href="/main" style="display: inline-block; margin: 20px; font-weight: bold; text-decoration: none; background-color: #1f497d; color: white; padding: 10px 15px; border-radius: 5px;">← Back to Home</a>
+
     <div class="container">
         <div class="sidebar">
             <h2>Add Yourself</h2>
